# DevStats

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PRParameters.json  PullRequestInfo.json  README.md  docker-compose.yml  grading.txt  mypy.ini  new_grading.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b188a27b4e29_create_users_and_pull_requests.py
backend/app/: main.py  test.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  health.py  score.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py  github.py  github_client.py
backend/app/models/: __init__.py  pull_request.py  user.py
backend/app/schemas/: auth.py  github.py  pull_request.py  score.py  user.py
backend/app/services/: __init__.py  github_sync.py  scoring_service.py  user_service.py
backend/tests/: conftest.py
