[project]
name = "devstats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy",
  "asyncpg",
  "alembic",
  "httpx",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]
